# CrilinSim

./: .gitignore  CMakeLists.txt  README.md  pion.py  pion_new.py
include/: CrilinGeometry.hh  CrystalHit.hh  CrystalHit.hh~  CrystalHitsCollection.hh  CrystalHitsCollection.hh~  CrystalSD.hh  CrystalSD.hh~  DetectorConstruction.hh  DetectorConstruction.hh~  EventAction.hh  EventAction.hh~  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunAction.hh~  SteppingAction.hh  VirtualDetector.hh
macro/: init_vis.mac  init_vis.mac~  run.mac  runElectrons.mac  runPions.mac  vis.mac
src/: CrilinGeometry.cc  CrilinSim.cc  CrilinSim.cc~  CrystalHit.cc  CrystalHit.cc~  CrystalHitsCollection.cc  CrystalSD.cc  CrystalSD.cc~  DetectorConstruction.cc  DetectorConstruction.cc_21marzo2025  DetectorConstruction.cc~  EventAction.cc  EventAction.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  PrimaryGeneratorMessenger.cc  RunAction.cc  RunAction.cc~  SteppingAction.cc  SteppingAction.cc~  VirtualDetector.cc
